# crypto-object-store

./: .gitignore  README.md
crypto-object-store/: Cargo.toml
crypto-object-store/src/: crypt_fs.rs  main.rs
