[package]
name = "crypto-object-store"
version = "0.1.0"
edition = "2024"

[dependencies]
url = "2.5.4"
tokio = "1.44.2"
deltalake = {version = "0.25.0", features = ["datafusion"] }
deltalake-core = "0.25.0"
async-trait = "0.1.88"
bytes = "1.10.1"
futures-core = "0.3.31"
log = "0.4.27"
simple-logging = "2.0.2"
cocoon = { version = "0.4.3", features = ["std", "thiserror"]}
show-bytes = "0.2.0"
futures = "0.3.31"
cached = "0.55.1"
object_store_std = { package = "object_store", version = "0.11.2", features = ["integration"] }